welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(Nbpas:int, versLavant: Boolean){
^Program:2: error: expected class or object definition
def move(Nbpas:int, versLavant: Boolean){
^